--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
 <body class="font-poppins">
 
-    <header class=" md:container  md:mx-auto">
+    <header class="  lg:max-w-7xl lg:mx-auto">
         <nav>
-            <div class="navbar ">
+            <div class="navbar px-0 my-7">
                 <div class="flex-1">
                     <div class="dropdown">
                         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -63,7 +63,7 @@
                             <li><a>Contact</a></li>
                         </ul>
                     </div>
-                    <a class="btn btn-ghost  font-bold text-2xl lg:text-4xl">Bike Zone</a>
+                    <a class="btn btn-ghost px-0  font-bold text-2xl lg:text-4xl">Biker Zone</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal text-base px-1">
@@ -172,7 +172,7 @@
           </div>
     </header>
 
-    <main class=" md:container  md:mx-auto">
+    <main class=" lg:max-w-7xl lg:mx-auto">
 
     </main>
 </body>
