--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
          </section>
 
          <!-- happy clients -->
-          <section class="mx-5 md:mx-12 my-28">
-            <h1 class="text-5xl font-bold text-center">Happy <span class="text-bike-primary">Clients Says</span></h1>
+          <section class="mx-5 md:mx-12 my-28"> 
+            <h1 class="text-2xl md:text-4xl lg:text-5xl font-bold text-center">Happy <span class="text-bike-primary">Clients Says</span></h1>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 my-12">
                 <!-- review one  -->
@@ -349,7 +349,82 @@
                   </div>
             </div>
           </section>
+
+          <!-- frequently ask question section  -->
+
+          <section class="">
+            <h1 class="text-2xl md:text-4xl lg:text-5xl font-bold text-center mx-5 md:mx-12  ">Frequently Asked <span class="text-bike-primary  " >Questions</span></h1>
+            <div class="my-16">
+                <div class="hero  ">
+                    <div class="hero-content md:mx-7 flex-col lg:gap-20 lg:flex-row">
+                      <div class="">
+                        <img
+                        src="images/others/faq.png"
+                        class="lg:max-w-sm rounded-lg " />
+                      </div>
+                      <div class=" space-y-3">
+                        <div class="collapse collapse-arrow border border-gray-300 ">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">What are the most important things I should
+                                know about riding a bike?</div>
+                            <div class="collapse-content">
+                              <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                          </div>
+                          <div class="collapse collapse-arrow  border border-gray-300">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+                                new one?</div>
+                            <div class="collapse-content">
+                              <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+                            </div>
+                          </div>
+                          <div class="collapse collapse-arrow  border border-gray-300">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                            <div class="collapse-content">
+                              <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+                            </div>
+                          </div>
+                          <div class="collapse collapse-arrow border border-gray-300">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                            <div class="collapse-content">
+                              <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+                            </div>
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+          </section>
     </main>
+
+    <!-- footer section  -->
+
+        <footer class="footer bg-neutral text-neutral-content p-10 items-center justify-around">
+            <aside>
+              
+              <p>
+                ACME Industries Ltd.
+                <br />
+                Providing reliable tech since 1992
+              </p>
+            </aside>
+            <nav>
+              <h6 class="footer-title">Social</h6>
+              <div class="grid grid-cols-1 gap-4">
+                <a>
+                  <img class="w-32" src="images/others/android.png" alt="">
+                </a>
+                <a>
+                  <img class="w-32" src="images/others/ios.png" alt="">
+                </a>
+                
+              </div>
+            </nav>
+          </footer>
+ 
 </body>
 
 </html>
